--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+micromath = "2.1.0"
+nalgebra = "0.32.4"
+ndarray = {version = "0.15.6", features = ["std", "serde", "rayon"]}
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "2d_benchmark"
+harness = false
+
