Updated Cargo.toml, included prettytable

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 micromath = "2.1.0"
 ndarray = {version = "0.15.6", features = ["std", "serde", "rayon"]}
+prettytable = "0.10.0"
 
 [dev-dependencies]
 criterion = "0.3"
