Fix DType casting to use enums instead of strings.
Rust is not Python and does not use runtime-invalidable values when we could use enums. Also, strings tend to be slow so we should generally avoid using them. The Rust type system is our friend.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 micromath = "2.1.0"
 ndarray = {version = "0.15.6", features = ["std", "serde", "rayon"]}
 prettytable = "0.10.0"
+thiserror = "1.0.58"
 
 [dev-dependencies]
 criterion = "0.3"
