--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 csv = "1.3.0"
 micromath = "2.1.0"
 ndarray = {version = "0.15.6", features = ["std", "serde", "rayon"]}
+num-traits = "0.2.18"
 prettytable = "0.10.0"
 thiserror = "1.0.58"
 
