--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 csv = "1.3.0"
+float-derive = "0.1.0"
+float-derive-macros = "0.1.0"
 micromath = "2.1.0"
 ndarray = {version = "0.15.6", features = ["std", "serde", "rayon"]}
 num-traits = "0.2.18"
