--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+counter = "0.5.7"
 csv = "1.3.0"
 float-derive = "0.1.0"
 float-derive-macros = "0.1.0"
 micromath = "2.1.0"
 ndarray = {version = "0.15.6", features = ["std", "serde", "rayon"]}
+num-order = "1.2.0"
 num-traits = "0.2.18"
+ordered-float = "4.2.0"
 prettytable = "0.10.0"
 thiserror = "1.0.58"
 
