--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "rust-analyzer.linkedProjects": ["Cargo.toml"]
+    "rust-analyzer.linkedProjects": [
+        "Cargo.toml"
+    ],
+    "files.associations": {
+        "utility": "cpp"
+    }
 }
