--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ thiserror = "1.0.58"
 # gpu_accel deps
 pollster = { version = "0.3.0", optional = true }
 wgpu = { version = "0.19.4", optional = true }
+rand_chacha = "0.3.1"
 
 [dev-dependencies]
 criterion = "0.3"
