--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["gpu_accel"]
-gpu_accel = ["dep:pollster", "dep:wgpu"]
+default = [ "gpu_accel" ]
+gpu_accel = [ "dep:bytemuck", "dep:naga", "dep:vulkano" ]
 
 [dependencies]
 counter = "0.5.7"
@@ -19,12 +19,13 @@ num-traits = "0.2.18"
 ordered-float = "4.2.0"
 prettytable = "0.10.0"
 rand = "0.8.5"
+rand_chacha = "0.3.1"
 thiserror = "1.0.58"
 
 # gpu_accel deps
-pollster = { version = "0.3.0", optional = true }
-wgpu = { version = "0.19.4", optional = true }
-rand_chacha = "0.3.1"
+bytemuck = { version = "1.15", optional = true }
+naga = { version = "0.19", optional = true }
+vulkano = { version = "0.34", optional = true }
 
 [dev-dependencies]
 criterion = "0.3"
