--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ float-derive = "0.1.0"
 float-derive-macros = "0.1.0"
 micromath = "2.1.0"
 ndarray = {version = "0.15.6", features = ["std", "serde", "rayon"]}
+ndarray-linalg = "0.16.0"
 num-order = "1.2.0"
 num-traits = "0.2.18"
 ordered-float = "4.2.0"
