--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ bytemuck = { version = "1.15", optional = true }
 naga = { version = "0.19", optional = true }
 vulkano = { version = "0.34", optional = true }
 log = "0.4.21"
+either = "1.12.0"
 
 [dev-dependencies]
 criterion = "0.3"
