--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,16 @@ edition = "2021"
 
 [features]
 default = [ "gpu_accel", "async_impls" ]
-gpu_accel = [ "dep:bytemuck", "dep:naga", "dep:vulkano" ]
+gpu_accel = [ "dep:bytemuck", "dep:pollster", "dep:wgpu" ]
 async_impls = [ "dep:tokio" ]
 
 [dependencies]
 counter = "0.5.7"
 csv = "1.3.0"
+either = "1.12.0"
 float-derive = "0.1.0"
 float-derive-macros = "0.1.0"
+log = "0.4.21"
 micromath = "2.1.0"
 ndarray = {version = "0.15.6", features = ["std", "serde", "rayon"]}
 ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"]}
@@ -27,10 +29,8 @@ tokio = { version = "1.37.0", features = ["sync"], optional = true }
 
 # gpu_accel deps
 bytemuck = { version = "1.15", optional = true }
-naga = { version = "0.19", optional = true }
-vulkano = { version = "0.34", optional = true }
-log = "0.4.21"
-either = "1.12.0"
+pollster = { version = "0.3.0", optional = true }
+wgpu = { version = "0.20.1", optional = true }
 
 [dev-dependencies]
 criterion = "0.3"
