--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ tokio = { version = "1.37.0", features = ["sync"], optional = true }
 
 # gpu_accel deps
 bytemuck = { version = "1.15", optional = true }
-pollster = { version = "0.3.0", optional = true }
+pollster = { version = "0.3.0", optional = true, features = ["macro"] }
 wgpu = { version = "0.20.1", optional = true }
 
 [dev-dependencies]
