--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ naga = { version = "0.19", optional = true }
 vulkano = { version = "0.34", optional = true }
 log = "0.4.21"
 either = "1.12.0"
+rayon = "1.10.0"
 
 [dev-dependencies]
 criterion = "0.3"
