--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ vulkano = { version = "0.34", optional = true }
 log = "0.4.21"
 either = "1.12.0"
 rayon = "1.10.0"
-
+ball-tree = "0.5.0"
+petal-neighbors = "0.10.0"
+kdtree = "0.7.0"
 [dev-dependencies]
 criterion = "0.3"
