--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,5 +35,7 @@ rayon = "1.10.0"
 ball-tree = "0.5.0"
 petal-neighbors = "0.10.0"
 kdtree = "0.7.0"
+phf = {version = "0.11.2", features = ["macros"]}
+indexmap = "2.3.0"
 [dev-dependencies]
 criterion = "0.3"
