Started work on the cross-validator, and removed the duplicate code via hack in the lib-rs file

--- a/neuron-macros/Cargo.toml
+++ b/neuron-macros/Cargo.toml
@@ -10,5 +10,5 @@ proc-macro = true
 
 [dependencies]
 quote = "1.0.36"
-syn = "2.0.74"
+syn = {version = "2.0.74", features = ["extra-traits"]}
 proc-macro2 = "1.0.86"
