--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = [ "gpu_accel", "async_impls" ]
+default = [ "gpu_accel" ]
 gpu_accel = [ "dep:bytemuck", "dep:pollster", "dep:wgpu" ]
-async_impls = [ "dep:tokio" ]
 
 [dependencies]
 counter = "0.5.7"
@@ -25,7 +24,8 @@ prettytable = "0.10.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 thiserror = "1.0.58"
-tokio = { version = "1.37.0", features = ["sync"], optional = true }
+# TODO: Make this as togglable as possible; `macros` features is only needed for testing.
+tokio = { version = "1.37.0", features = ["sync", "macros"] }
 
 # gpu_accel deps
 bytemuck = { version = "1.15", optional = true }
